<resources>
    <string name="app_name">Pablo de Tarso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inst. Gestión Social Pablo de Tarso</string>
    <string name="nav_header_subtitle">Fund. Presencia Presente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Estudiantes</string>
    <string name="menu_slideshow">Profesores</string>
    <string name="menu_utilidades">Apuntes</string>
    <string name="menu_radio">Radio FM Tarso</string>
    <string name="menu_preinscripcion">Pre Inscripción</string>
    <string name="menu_biblioteca">Biblioteca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Cursos">
        <item>Seleccione</item>
        <item>1º año</item>
        <item>2º año</item>
        <item>3º año</item>
        <item>4º año</item>
        <item>5º año</item>
        <item>6º año</item>
    </string-array>

    <string-array name="CursosSolos">
        <item>Seleccione</item>
        <item>1º año</item>
        <item>2º año</item>
        <item>3º año</item>
        <item>4º año</item>
        <item>5º año</item>
        <item>6º año</item>
    </string-array>

    <string-array name="Burbujas">
        <item>Seleccione</item>
        <item>Burbuja 1</item>
        <item>Burbuja 2</item>
    </string-array>

    <string-array name="Materias">
        <item>Seleccione</item>
        <item>Matemática</item>
        <item>Lengua y Literatura</item>
        <item>Historia</item>
        <item>Geografía</item>
        <item>Ingles</item>
        <item>Ética y ciudadana</item>
        <item>Tecnología</item>
        <item>Físicoquímica</item>
        <item>Biología</item>
        <item>TIC</item>
        <item>Cs. de la Tierra</item>
        <item>Lit. Latinoamericana</item>
        <item>Bioética</item>
        <item>Artes Visuales</item>
        <item>Música</item>
        <item>Educación Fisica</item>
        <item>Intro. a la Investigación</item>
        <item>Práctica Educativa</item>
    </string-array>

    <string-array name="Asignaturas">
        <item>Seleccione</item>
        <item>Burbuja 1</item>
        <item>Burbuja 2</item>
        <item>Matemática</item>
        <item>Lengua y Literatura</item>
        <item>Historia</item>
        <item>Geografía</item>
        <item>Ingles</item>
        <item>Ética y ciudadana</item>
        <item>Tecnología</item>
        <item>Físicoquímica</item>
        <item>Biología</item>
        <item>TIC</item>
        <item>Cs. de la Tierra</item>
        <item>Lit. Latinoamericana</item>
        <item>Bioética</item>
        <item>Artes Visuales</item>
        <item>Música</item>
        <item>Educación Fisica</item>
        <item>Intro. a la Investigación</item>
        <item>Práctica Educativa</item>
        <item>Proy. Artes Visuales - Ed. Física</item>
        <item>Proy. Artes Visuales - Música</item>
        <item>Proy. Artes Visuales - Lengua</item>
        <item>Proy. Artes Visuales - Biología</item>
        <item>Proy. Artes Visuales - Matemática</item>
        <item>Proy. Ed. Física - Geografía</item>
        <item>Proy. Historia - Ética y ciudadana</item>
        <item>Proy. Historia - Música</item>
        <item>Proy. Tecnología - Música</item>
        <item>Proy. Tecnología - Lengua y Lit.</item>
        <item>Proy. Lengua - Ingles</item>
        <item>Proy. Economía - Ecología</item>
        <item>Trienal Sociales (Hist. - Geog. - Ética - Lengua)</item>
        <item>Trienal Nat-Cs.Exactas (Mat. - Fis. y Quim.)</item>
        <item>Trienal Est-Exp. (A. Vis. - Ed. Fisica - Mus.)</item>

    </string-array>

</resources>