<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_work"
            android:title="@string/menu_slideshow" />

    </group>

    <group
        android:id="@+id/grupo1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_utilidades"
            android:icon="@drawable/ic_baseline_attach_file_24"
            android:title="@string/menu_utilidades" />
        <item
            android:id="@+id/nav_preincripcion"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_preinscripcion" />

    </group>

    <group
        android:id="@+id/grupo2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/radioActivity"
            android:icon="@drawable/ic_radio"
            android:title="@string/menu_radio" />

    </group>
</menu>