<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.emdev.tarso.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.emdev.tarso.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.emdev.tarso.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_utilidades"
        android:name="com.emdev.tarso.ui.utilidades.UtilidadesFragment"
        android:label="@string/menu_utilidades"
        tools:layout="@layout/utilidades_fragment" />

    <!--fragment
        android:id="@+id/nav_radio"
        android:name="com.emdev.tarso.ui.radio.RadioFragment"
        android:label="@string/menu_radio"
        tools:layout="@layout/radio_fragment" /-->
    <activity
        android:id="@+id/radioActivity"
        android:name="com.emdev.tarso.RadioActivity"
        android:label="activity_radio"
        tools:layout="@layout/activity_radio" />
    <fragment
        android:id="@+id/nav_preincripcion"
        android:name="com.emdev.tarso.ui.preinscripcion.preincripcion"
        android:label="@string/menu_preinscripcion"
        tools:layout="@layout/preincripcion_fragment" />
</navigation>